...
            isExternalLink
          />
        )}

        {showContactSupport && (
          <SettingsItemTextValue
            testID="SupportContactLink"
            title={t('contact')}
            onPress={onPressContact}
            borderless
            showChevron
          />
        )}
...
