...
          details={t('shareAnalytics_detail')}
        />
        <SettingsExpandedItem
          title={t('removeAccountTitle')}
          details={t('removeAccountDetails')}
          onPress={onRemoveAccountPress}
          testID="ResetAccount"
        />
        <SettingsExpandedItem
          title={t('deleteAccountTitle')}
          details={t('deleteAccountDetails')}
          onPress={onDeleteAccountPress}
          testID="DeleteAccount"
...
          style={{ marginTop: Spacing.Regular16 }}
          size={BtnSizes.FULL}
          type={BtnTypes.SECONDARY}
          onPress={onPressContinueWithAccountRemoval}
          text={t('continue')}
          disabled={revokeNumberAsync.loading}
          testID="ResetAccountButton"
        />
      </BottomSheet>
      <BottomSheet
        forwardedRef={deleteAccountBottomSheetRef}
        title={t('deleteAccountWarning.title')}
        description={t('deleteAccountWarning.description')}
...
